--- a/app/views/admin/messages/index.html.haml
+++ b/app/views/admin/messages/index.html.haml
@@ -2,7 +2,7 @@
 .text
   %h3= "Messages : #{smart_objects_objects_displayed_range(@messages)} of #{smart_objects_count(@messages)}"
   
-  .actions_right= link_to('Go to Trash', trashs_admin_messages_path)
+  .actions_right= link_to('Go to Trash', trashes_admin_messages_path)
   
   %table
     - 5.times do
@@ -34,7 +34,7 @@
           = button_to("trash", trash_admin_message_path(message), :method => :put, :id => "trash_message_#{message.id}", :class => "button delete")
   
   - unless params.key? :all
+    .right_links= link_to "View all", admin_messages_path(:all => true)
     = will_paginate @messages
-    = link_to "View all", admin_messages_path(:all => true)
   - else
-    = link_to "View with paginate", admin_messages_path
+    .right_links= link_to "View with paginate", admin_messages_path
