--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,4 +1,4 @@
-%h2.headline= "mintt is a course for EPFL PhD students organized by EPFL Tech Transfer Office"
+%h2.headline= "mintt is a course for EPFL PhD students organized by the EPFL Tech Transfer Office"
 .text
   %p= "It is part of the EPFL Doctoral School under the College of Management of Technology program."
   
@@ -6,7 +6,7 @@
   %p= "In a nutshell, mintt's purpose is to provide EPFL PhD students with an accelerated training in Invention management, assessment of the potential, intellectual property rights elaboration, license negotiation, start-up option evaluation and experience sharing in the fields of academic results industrialization and sales."
   
   %h4="Content"
-  %p= "mintt is based on real-world EPFL invention cases and is teached by experienced and active professionals in the field of technology transfer working at the Tech Transfer Office of EPFL (SRI). Learn more about #{link_to 'the modules of this course', page_path('modules')}."
+  %p= "mintt is based on real-world EPFL invention cases and is taught by experienced and active professionals in the field of technology transfer working at the Technology Transfer Office of EPFL (SRI). Learn more about #{link_to 'the modules of this course', page_path('modules')}."
   
   %h4= "Format"
-  %p= "One of the goal of the course is to be very dense. Therefore the course starts in early June with two full days of teaching with approximately a dozen of teachers. It is then followed by a personal work to be conducted in a tandem of students in the form an EPFL invention case study to be presented and discussed with the rest of the class in October."
+  %p= "One of the goals of the course is to be very dense. Therefore the course starts in early June with two full days of teaching with approximately a dozen of teachers. It is then followed by a personal work to be conducted in a tandem of students in the form of an EPFL invention case study to be presented and discussed with the rest of the class in October."
