--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -23,7 +23,7 @@
       %h3
         %strong= "Module 1"
         = "About inventions and inventors"
-      .desc= "This module is focusing on the very beginning of the innovation chain : the invention in a scientific research environment. It will address many questions in this field such as what is an invention? What are the various types of inventions? What is the difference between an invention and a discovery? Who is an inventor, what are his/her main qualities, duties and rights and which benefits he/she might have? Publish and protect, is it compatible? How to at EPFL? etc. The participants will be exposed to real cases and meet also an invited speaker who will talk about his/her experiences as scientist/inventor who participated actively to an innovation adventure."
+      .desc= "This module is focusing on the very beginning of the innovation chain : the invention in a scientific research environment. It will address many questions in this field such as what is an invention? What are the various types of inventions? What is the difference between an invention and a discovery? Who is an inventor, what are his/her main qualities, duties and rights and which benefits he/she might have? Publish and protect, is it compatible? How to disclose an invention at EPFL? etc. The participants will be exposed to real cases and meet also an invited speaker who will talk about his/her experiences as scientist/inventor who participated actively to an innovation adventure."
       
   - module_box do
     .left
@@ -79,7 +79,7 @@
       %h3
         %strong= "Module 5"
         = "Start-up"
-      .desc= "  Create a start-up? In some cases it's going to be the only way for its founders to bring an innovation to the market while everybody else has yet to understand its potential.<br /> But before moving forward and create one, it is useful for the aspiring entrepreneur to understand what it takes to do a start-up and what kind of mindset she or he must develop to be up to this demanding and sometimes very rewarding task."
+      .desc= "To create a start-up is in some cases to be the only way for an inventor to demonstrate the validity of an innovation while everybody else has yet to fully grasp its potential.<br /> However before moving forward, it is necessary for the aspiring entrepreneur to understand what it takes to build a start-up and what kind of mindset she or he must develop to be up to this demanding and sometimes very rewarding task."
       
   - module_box do
     .left
