Added formats for date and time in config/initializers/time_formats.rb Added reply_to message.sender_email for the notification mail of new contact message

--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -16,5 +16,5 @@
     
   .content
     .from= "<strong>From</strong>: #{message_sender_name_with_email_and_mailto(@message, 'hex', "\n\n\n#{message_sender_name_with_email(@message)} wrote on #{@message.created_at}:\n\n#{@message.content}")}"
-    .date= "<strong>Date Received</strong>: #{sexy_date(@message.created_at)}, #{sexy_time(@message.created_at)}"
+    .date= "<strong>Date Received</strong>: #{sexy_date(@message.created_at)} #{sexy_time(@message.created_at)}"
     .body= message_content(@message)
