Updated a little bit the show page's title for user and message

--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -1,4 +1,4 @@
-- title "mintt: admin | Messages > From #{message_sender_name(@message)} received #{time_ago_in_words(@message.created_at)}"
+- title "mintt: admin | Messages > From #{message_sender_name(@message)} received #{time_ago_in_words(@message.created_at)} ago"
 
 .text.mail
   %h3= "Message"
