Mehdi content fixed

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -9,4 +9,4 @@
   %p= "mintt is based on real-world EPFL invention cases and is taught by experienced and active professionals in the field of technology transfer working at the Technology Transfer Office of EPFL (SRI). Learn more about #{link_to 'the modules of this course', page_path('modules')}."
   
   %h4= "Format"
-  %p= "One of the goals of the course is to be very dense. Therefore the course starts in early June with two full days of teaching with approximately a dozen of teachers. It is then followed by a personal work to be conducted in a tandem of students in the form of an EPFL invention case study to be presented and discussed with the rest of the class in October."
+  %p= "One of the goals of the course is to be very dense. Therefore the course starts in early June with two full days of teaching with approximately a dozen of teachers. It is then followed by a personal work to be conducted in a tandem of students in the form of an EPFL invention case study to be presented in a report and discussed with the rest of the class in October."
