--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -50,11 +50,11 @@
           %li= "When: June 8 & 9 and October 6, 2010"
           %li= "Number of credits: 3"
           %li= "Number of students: 18 max. Decided upon a selection balancing several factors including multi-disciplinarity"
-          %li= "Form of Exam: Oral presentation and project report"
+          %li= "Form of Exam: Project report and oral presentation"
           %li= "Delay to submit application: End of April 2010 through #{ link_to 'online application', new_user_registration_path }"
           %li= "Location: #{ link_to 'EPFL Science Park, PSE-C building', 'http://bit.ly/aWDL19', :onclick => 'window.open(this); return false' }"
         %h4= "More info"
-        %p= "If you have any question, Please contact us through the following #{link_to 'form', '/contact'}."
+        %p= "If you have any question, please contact us through the following #{link_to 'form', '/contact'}."
       .spacer
       #footer
         %p= "#{ link_to 'Contact', '/contact' } |  © 2010 EPFL , SRI, CM 2-Station 10, CH-1015 Lausanne, tel. +41 (0)21 693 70 23"
