--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -51,7 +51,7 @@
       %h3
         %strong= "Module 3"
         = "Intellectual Property"
-      .desc= "Intellectual property deals with the legal protection of inventions, software and other intellectual creations. What kind of protection can you get? What advantages does it bring?  How much does it cost? What are the best protection strategies?  This module will show the benefits and pitfalls of patents, copyright and other intellectual property rights based on real cases."
+      .desc= "Intellectual property deals with the legal protection of inventions, software and other intellectual creations. What kind of protection can you get? What advantages does it bring?  How much does it cost? What are the best protection strategies?  This module will show the benefits and pitfalls of patents, copyright and other intellectual property rights based on real cases.<br /> An invited guest will also bring his/her practical experiences in the field of intellectual property matters to the class."
       
   - module_box do
     .left
