--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -20,7 +20,7 @@
     = f.input :supervisor_authorization, :as => :radio, :collection => [["Yes", "yes"], ["No", "no"]], :label => "Do you have the agreement of your thesis supervisor to participate to mintt?", :required => true
     = f.input :doctoral_school_rules, :as => :radio, :collection => [["Yes", "yes"], ["No", "no"]], :label => "Are you subject to EPFL doctoral school regulations and do you need credits?", :required => true
     = f.input :thesis_invention, :as => :text, :label => "Have you made an invention in the course of your thesis? If yes, could you briefly describe it?:"
-    = f.input :motivation, :as => :text, :label => "Could you describe what motivates you to participate to this course?"
+    = f.input :motivation, :as => :text, :label => "Could you describe what motivates you to participate to this course?", :required => true
     
   - f.buttons do
     = submit_tag "Update", :confirm => "Are you sure to update #{user_full_name(@user)} informations?"
