--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,7 +48,7 @@
         %ul
           %li= "Language: English"
           %li= "When: June 8 & 9 and October 6, 2010"
-          %li= "Number of credits: 3 (subject to final confirmation later in April)"
+          %li= "Number of credits: 2 or 3 (subject to final confirmation later in April)"
           %li= "Number of students: 18 max. Decided upon a selection balancing several factors including multi-disciplinarity"
           %li= "Form of Exam: Project report and oral presentation"
           %li= "Delay to submit application: End of April 2010 through #{ link_to 'online application', new_user_registration_path }"
