--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,7 +35,7 @@
         = yield
       #sidebar
         %h3= "2010 Application"
-        %p= "We thank you for your interest. 2010 Registrations are now closed."
+        %p= "We thank you for your interest.<br /> 2010 Registrations are now closed."
         -#%p= "The applications are now open till the end of April 2010. Please use the button below to apply."
         -#.box
         -#  - link_to new_user_registration_path, :id => "registration_button" do
