Starting the phase 3 of mintt

--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -7,7 +7,7 @@
       
     - f.buttons do
       = f.commit_button "Update template"
-    .required_mention= "<abbr title='required'>*</abbr> required"
+    .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
     
 - content_for :sidebar do
   %h3 User scoped tags
