--- a/app/views/admin/mail_templates/index.html.haml
+++ b/app/views/admin/mail_templates/index.html.haml
@@ -10,7 +10,4 @@
       %th Actions
       
     - @mail_templates.each do |mail_template|
-      %tr[mail_template]
-        %td= link_to(mail_template_title(mail_template), admin_mail_template_path(mail_template))
-        %td= link_to("edit", edit_admin_mail_template_path(mail_template))
-        -# %td= button_to("delete", admin_mail_template_path(mail_template), :confirm => "Are you sure?", :method => :delete)
+      = render 'mail_template', :object => mail_template
