--- a/app/views/admin/mail_templates/show.html.haml
+++ b/app/views/admin/mail_templates/show.html.haml
@@ -6,4 +6,4 @@
   .actions_right= link_to("edit", edit_admin_mail_template_path(@mail_template))
   
   .content
-    = auto_link(Liquid::Template.parse(@mail_template.content).render('user' => @user).gsub!(/\n/, '<br />'))
+    = raw auto_link(Liquid::Template.parse(@mail_template.content).render('user' => @user).gsub!(/\n/, '<br />'))
