--- a/app/views/admin/messages/index.html.haml
+++ b/app/views/admin/messages/index.html.haml
@@ -15,26 +15,11 @@
       %th
       
     - @messages.each do |message|
-      %tr[message]{ :class => cycle("", "alt") }
-        %td.icon_centered
-          %input{ :type => "hidden", :value => admin_message_path(message) }
-          - if message.unread?
-            = image_tag("/images/admin/unread_icon.png", :alt => "Unread")
-        %td.icon_centered
-          - if message.replied?
-            = image_tag("/images/admin/replied_icon.png", :alt => "Replied")
-        %td.from
-          %h4= message_sender_name_with_email_and_mailto(message)
-          %p.excerpt= truncate message.content, :length => 160
-        -#%td= link_to(words_count(message.content), admin_message_path(message))
-        %td.datetime
-          %span.date= sexy_date(message.created_at)
-          %span.time= sexy_time(message.created_at)
-        %td
-          = button_to("trash", trash_admin_message_path(message), :method => :put, :id => "trash_message_#{message.id}", :class => "button delete")
-  
-  - unless params.key? :all
-    .right_links= link_to "View all", admin_messages_path(:all => true)
-    = will_paginate @messages
-  - else
+      = render 'message', :object => message
+      
+  - if params.key? :all
     .right_links= link_to "View with paginate", admin_messages_path
+  - else
+    .right_links= link_to "View all", admin_messages_path(:all => true)
+    = will_paginate
+    
