--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -15,6 +15,6 @@
     = back_to_inbox_or_trash(@message)
     
   .content
-    .from= "<strong>From</strong>: #{message_sender_name_with_email_and_mailto(@message, 'hex', "\n\n\n#{message_sender_name_with_email(@message)} wrote on #{@message.created_at}:\n\n#{@message.content}")}"
-    .date= "<strong>Date Received</strong>: #{sexy_date(@message.created_at)} #{sexy_time(@message.created_at)}"
+    .from= raw "#{content_tag(:strong, 'From')}: #{message_sender_name_with_email_and_mailto(@message, 'hex', "\n\n\n#{message_sender_name_with_email(@message)} wrote on #{@message.created_at}:\n\n#{@message.content}")}"
+    .date= raw "#{content_tag(:strong, 'Date Received')}: #{sexy_date(@message.created_at)} #{sexy_time(@message.created_at)}"
     .body= message_content(@message)
