--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -8,8 +8,10 @@
     %p.email
       = image_tag "/images/admin/email.png", :alt => "Email"
       = mail_to @user.email
-  .application_date= "<em>#{display_date(@user.confirmed_at)}</em>"
-  
+  .application_date
+    = content_tag(:em, display_date(@user.confirmed_at))
+    %p.edit= link_to "edit user", edit_admin_user_path(@user)
+    
   .spacer
   .card
     %p
@@ -31,14 +33,15 @@
         = user_linkedin_url(@user)
         
   .text_box
-    %p= "<strong>Thesis supervisor</strong>: #{@user.thesis_supervisor}"
-    %p= "<strong>Thesis subject</strong>: #{@user.thesis_subject}"
-    %p= "<strong>Thesis registration date</strong>: #{display_date(@user.thesis_registration_date)}"
-    %p= "<strong>Thesis admission date</strong>: #{display_date(@user.thesis_admission_date)}"
-    %p= "<strong>Thesis invention</strong>: #{@user.thesis_invention}"
-    %p= "<strong>Supervisor authorization</strong>: #{@user.supervisor_authorization}"
-    %p= "<strong>Subject to EPFL doctoral school regulations and does he/she needs credits?</strong>: #{@user.doctoral_school_rules}"
-    %p= "<strong>Motivation</strong>: #{@user.motivation}"
+    %p= content_tag(:strong, "#{@user.selected_at.present? ? 'S' : 'Not s'}elected to participate in the #{@user.year} program")
+    %p= raw "#{content_tag(:strong, 'Thesis supervisor')}: #{@user.thesis_supervisor}"
+    %p= raw "#{content_tag(:strong, 'Thesis subject')}: #{@user.thesis_subject}"
+    %p= raw "#{content_tag(:strong, 'Thesis registration date')}: #{display_date(@user.thesis_registration_date)}"
+    %p= raw "#{content_tag(:strong, 'Thesis admission date')}: #{display_date(@user.thesis_admission_date)}"
+    %p= raw "#{content_tag(:strong, 'Thesis invention')}: #{@user.thesis_invention}"
+    %p= raw "#{content_tag(:strong, 'Supervisor authorization')}: #{@user.supervisor_authorization}"
+    %p= raw "#{content_tag(:strong, 'Subject to EPFL doctoral school regulations and does he/she needs credits?')}: #{@user.doctoral_school_rules}"
+    %p= raw "#{content_tag(:strong, 'Motivation')}: #{@user.motivation}"
     
     %p
     - semantic_form_for [:admin, @user], :html => { :class => "main" } do |f|
