--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -40,7 +40,5 @@
       #sidebar
         = yield :sidebar
       .spacer
-      #footer
-        %p= "#{ link_to 'Contact', '/contact' } |  © 2010 EPFL , SRI, CM 2-Station 10, CH-1015 Lausanne, tel. +41 (0)21 693 70 23"
-    
+      = render 'shared/footer'
     - google_analytics
