--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,20 +3,20 @@
   %head
     %meta{'http-equiv' => "content-type", :content => "text/html;charset=UTF-8"}
     
-    %title= h(yield(:title) || "mintt")
+    %title= yield(:title) || "mintt"
     
     %link{ :href => "/stylesheets/style.css", :type => "text/css", :media => "screen", :rel => "stylesheet" }
-    %script{ :type => "text/javascript", :src => "http#{ request.ssl? ? 's':'' }://use.typekit.com/qwi4bur.js" }
+    %script{ :type => "text/javascript", :src => "http#{request.ssl? ? 's' : ''}://use.typekit.com/qwi4bur.js" }
     %script{ :type => "text/javascript" }= "try{Typekit.load();}catch(e){};"
     /[if gte IE 7]
       == <script type="text/javascript">var curvyCornersNoAutoScan = true;</script>
       %script{ :src => "/javascripts/curvycorners.js", :type => "text/javascript" }
     %script{ :src => "/javascripts/prototype.min.js", :type => "text/javascript" }
     %script{ :src => "/javascripts/application.js", :type => "text/javascript" }
-
+    
   %body
     - flash.each do |key, value|
-      #flash{ :class => "flash_#{key}"}= h value
+      #flash{ :class => key }= value
     #global
       #header
         #halo
@@ -29,21 +29,23 @@
             - link_to root_path do
               %span= "Home"
           %li{ :class => ('active' if params[:id] == 'modules') }= link_to "Modules", "/modules"
-          -#%li{ :class => ('active' if controller_name == 'registrations') }= link_to "Application", new_user_registration_path
+          - if REGISTRATION_OPEN
+            %li{ :class => ('active' if controller_name == 'registrations') }= link_to "Application", new_user_registration_path
           %li{ :class => ('active' if controller_name == 'messages') }= link_to "Contact", "/contact"
       #content
         = yield
       #sidebar
         %h3= "2010 Application"
-        %p= "We thank you for your interest.<br /> 2010 Registrations are now closed."
-        -#%p= "The applications are now open till the end of April 2010. Please use the button below to apply."
-        -#.box
-        -#  - link_to new_user_registration_path, :id => "registration_button" do
-        -#    %span= "Apply for the 2010 course"
+        %p= raw "We thank you for your interest.<br /> 2010 Registrations are now closed."
+        - if REGISTRATION_OPEN
+          %p= "The applications are now open till the end of April 2010. Please use the button below to apply."
+          .box
+            - link_to new_user_registration_path, :id => "registration_button" do
+              %span= "Apply for the 2010 course"
         %h4= "Organizing Entities"
         %ul.entities
           %li.first= link_to image_tag("/images/epfl_logo.png", :alt => "EPFL Logo"), "http://www.epfl.ch", :onclick => 'window.open(this); return false'
-          %li= link_to "SRI <em>(Tech transfer Office)</em>", "http://sri.epfl.ch", :onclick => 'window.open(this); return false'
+          %li= link_to "SRI #{content_tag(:em, '(Tech transfer Office)')}".html_safe, "http://sri.epfl.ch", :onclick => 'window.open(this); return false'
           %li.last= link_to "CDM", "http://cdm.epfl.ch", :onclick => 'window.open(this); return false'
         %h4= "Course Information"
         %ul
@@ -52,12 +54,15 @@
           %li= "Number of credits: 2 or 3 (subject to final confirmation later in April)"
           %li= "Number of students: 18 max. Decided upon a selection balancing several factors including multi-disciplinarity"
           %li= "Form of Exam: Project report and oral presentation"
-          %li= "Delay to submit application: End of April 2010 through #{ link_to 'online application', new_user_registration_path }"
-          %li= "Location: #{ link_to 'EPFL Science Park, PSE-C building', 'http://bit.ly/aWDL19', :onclick => 'window.open(this); return false' }"
+          %li
+            = "Delay to submit application: End of April 2010"
+            - if REGISTRATION_OPEN
+              = " through #{link_to 'online application', new_user_registration_path}"
+          %li= raw "Location: #{link_to 'EPFL Science Park, PSE-C building', 'http://bit.ly/aWDL19', :onclick => 'window.open(this); return false'}"
         %h4= "More info"
-        %p= "If you have any question, please contact us through the following #{link_to 'form', '/contact'}."
+        %p= raw "If you have any question, please contact us through the following #{link_to 'form', '/contact'}."
       .spacer
-      #footer
-        %p= "#{ link_to 'Contact', '/contact' } |  © 2010 EPFL , SRI, CM 2-Station 10, CH-1015 Lausanne, tel. +41 (0)21 693 70 23"
-
+      
+      = render 'shared/footer'
+      
     - google_analytics
