Continue the work on phase 3 Setting-up log in (only selected candidates) and students private area Cleaning up the "selection process" in admin Specs

--- a/app/views/admin/messages/index.html.haml
+++ b/app/views/admin/messages/index.html.haml
@@ -1,4 +1,4 @@
-- title 'mintt: admin | Messages'
+- title ' | Messages'
 .text
   %h3= "Messages : #{smart_objects_objects_displayed_range(@messages)} of #{smart_objects_count(@messages)}"
   
