--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -1,5 +1,6 @@
+- title " | Application #{Time.now.year}"
 .text
-  %h3= "Application form for mintt 2010"
+  %h3= "Application form for mintt #{Time.now.year}"
   %p
     %strong= "June 8 and 9, October 6, 2010"
   %p= "Thank you to fill out the following form precisely and clearly."
