--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -1,3 +1,5 @@
+- title " | Mail templates > Edit #{mail_template_title(@mail_template)}"
+
 .text
   %h3= "Editing template '#{mail_template_title(@mail_template)}'"
 #register
