--- a/app/views/admin/mail_templates/show.html.haml
+++ b/app/views/admin/mail_templates/show.html.haml
@@ -1,4 +1,4 @@
-- title "mintt: admin | Mail templates > #{mail_template_title(@mail_template)}"
+- title " | Mail templates > #{mail_template_title(@mail_template)}"
 
 .text.mail
   %h3= "Mail template"
