--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,4 +1,5 @@
-- title 'mintt: admin | Candidates'
+- title ' | Candidates'
+
 .text
   %h3= "Candidates : #{smart_objects_objects_displayed_range(@users)} of #{smart_objects_count(@users)}"
   .export= link_to "Export all users in CSV", admin_users_path(:format => 'csv')
