--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{'http-equiv' => "content-type", :content => "text/html;charset=UTF-8"}
     
-    %title= h(yield(:title) || "mintt: admin")
+    %title= "mintt admin#{yield(:title)}"
     
     %link{ :href => "/stylesheets/style.css", :type => "text/css", :media => "screen", :rel => "stylesheet" }
     %link{ :href => "/stylesheets/admin.css", :type => "text/css", :media => "screen", :rel => "stylesheet" }
@@ -18,7 +18,7 @@
     %script{ :src => "/javascripts/application.js", :type => "text/javascript" }
   %body
     - flash.each do |key, value|
-      #flash{ :class => "flash_#{key}"}= h value
+      #flash{ :class => key }= h value
     #global
       #header
         #halo
@@ -40,5 +40,5 @@
       #sidebar
         = yield :sidebar
       .spacer
-      = render 'shared/footer'
+      = render 'layouts/footer'
     - google_analytics
