--- a/app/views/layouts/user.html.haml
+++ b/app/views/layouts/user.html.haml
@@ -20,8 +20,23 @@
     #global
       = render 'layouts/header'
       #content
+        %ul
+          %li= link_to "Program content", "/program"
+          %li= link_to "Modules documents", "/docs"
+          - if user_signed_in?
+            %li= link_to "Logout", destroy_user_session_path
+        - if user_signed_in?
+          - link_to edit_user_registration_path, :class => "user #{controller_name == 'registrations' ? 'active' : ''}" do
+            %strong
+              %span.icon= full_name(current_user)
+            %span.corner
+        - else
+          - link_to new_user_session_path, :class => "user" do
+            %strong
+              %span.icon= "Login"
+            %span.corner
         = yield
-      = render 'layouts/sidebar'
+      .spacer
       = render 'layouts/footer'
       
     - google_analytics
