Spec for users account Added Teacher and there are invitable

--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -6,8 +6,11 @@
   - f.inputs do
     %li#user_is_selected_input.boolean
       - content_tag(:label, :for => 'user_is_selected') do
-        = raw "#{f.check_box(:is_selected)}Selected and confirmed for the #{select_year(@user.year, { :start_year => 1992, :end_year => Time.now.year }, { :name => 'user[year]' })} mintt program?"
-    = f.input :sign_up_email, :as => :boolean, :label => "#{@user.selected? ? 'Re-s' : 'S'}end sign-up email to this student."
+        = raw "#{f.check_box(:is_selected, :checked => @user.has_been_selected?)}Selected and confirmed for the mintt program?"
+        %span.candidate_selected_contextual_infos{ :style =>'display:none;' }= "(a sign-up email will be sent to this student)" unless @user.has_been_selected?
+    %li#user_year_input.date.candidate_selected_contextual_infos
+      - content_tag(:label, :for => 'user_is_year') do
+        = raw "Year of selection: #{select_year(@user.year, { :start_year => 1992, :end_year => Time.now.year }, { :name => 'user[year]' })}"
     = f.input :gender, :as => :radio, :collection => [["Mrs.", "female"], ["Mr.", "male"]], :required => true
     = f.input :first_name, :required => true
     = f.input :last_name, :required => true
