--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,15 +11,15 @@
     /[if gte IE 7]
       == <script type="text/javascript">var curvyCornersNoAutoScan = true;</script>
       %script{ :src => "/javascripts/curvycorners.js", :type => "text/javascript" }
-    %script{ :src => "/javascripts/prototype.min.js", :type => "text/javascript" }
+    %script{ :src => "/javascripts/prototype.js", :type => "text/javascript" }
     %script{ :src => "/javascripts/application.js", :type => "text/javascript" }
     
   %body
-    - flash.each do |key, value|
-      #flash{ :class => key }= value
+    = render 'layouts/flash', :object => flash
     #global
       = render 'layouts/header'
       #content
+        = render 'layouts/user_header'
         = yield
       = render 'layouts/sidebar'
       = render 'layouts/footer'
