Teacher can now accept invitations They can log in and they have a private area (empty for now) Admin can manage teachers and re-send invitations Many specs

--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -12,24 +12,27 @@
     .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
     
 - content_for :sidebar do
-  %h3 User scoped tags
-  
+  %h3 Available tags
   %p Insert a tag with {{the_tag_here}}
-  
   %ul
-    %li Confirmation link : <span>user.confirmation_link</span>
-    %li First name : <span>user.first_name</span>
-    %li Last name : <span>user.last_name</span>
-    %li Full name : <span>user.full_name</span>
-    %li Email : <span>user.email</span>
-    %li Phone : <span>user.phone</span>
-    %li School : <span>user.school</span>
-    %li Lab : <span>user.lab</span>
-    %li Url : <span>user.url</span>
-    %li Linkedin url : <span>user.linkedin_url</span>
-    %li Thesis supervisor : <span>user.thesis_supervisor</span>
-    %li Thesis subject : <span>user.thesis_subject</span>
-    %li Thesis registration date : <span>user.thesis_registration_date</span>
-    %li Admission date : <span>user.thesis_admission_date</span>
-    %li Thesis invention : <span>user.thesis_invention</span>
-    %li Motivation text : <span>user.motivation</span>
+    - case @mail_template.title
+    - when /user/
+      %li Confirmation link : <span>user.confirmation_link</span>
+      %li First name : <span>user.first_name</span>
+      %li Last name : <span>user.last_name</span>
+      %li Full name : <span>user.full_name</span>
+      %li Email : <span>user.email</span>
+      %li Phone : <span>user.phone</span>
+      %li School : <span>user.school</span>
+      %li Lab : <span>user.lab</span>
+      %li Url : <span>user.url</span>
+      %li Linkedin url : <span>user.linkedin_url</span>
+      %li Thesis supervisor : <span>user.thesis_supervisor</span>
+      %li Thesis subject : <span>user.thesis_subject</span>
+      %li Thesis registration date : <span>user.thesis_registration_date</span>
+      %li Admission date : <span>user.thesis_admission_date</span>
+      %li Thesis invention : <span>user.thesis_invention</span>
+      %li Motivation text : <span>user.motivation</span>
+    - when /teacher/
+      %li Invitation link : <span>teacher.invitation_link</span>
+      %li Email : <span>teacher.email</span>
