--- a/app/views/admin/teachers/show.html.haml
+++ b/app/views/admin/teachers/show.html.haml
@@ -11,3 +11,11 @@
     
   .spacer
   .card
+    %p= "Invitation token: #{@teacher.invitation_token}"
+    
+    - if @teacher.has_accepted_invitation?
+      %p= "Registered"
+    - else
+      - form_for :teacher, @teacher, :url => invitation_path(@teacher) do |f|
+        = f.hidden_field :email
+        %p= f.submit "Re-send an invitation"
