--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -1,5 +1,5 @@
 %tr[user]{ :class => cycle("", "alt") }
-  %td.gender= link_to image_tag("/images/admin/#{'not_' if user.selected_at.blank?}selected.png", :alt => "#{'not ' if user.selected_at.blank?} selected"), admin_user_path(user)
+  %td= link_to image_tag("/images/admin/#{'not_' unless user.has_been_selected?}selected.png", :alt => "#{'not ' unless user.has_been_selected?} selected"), admin_user_path(user)
   %td.gender= link_to image_tag("/images/admin/#{user.gender}.png", :alt => user.gender), admin_user_path(user)
   %td= link_to full_name(user, true), admin_user_path(user)
   %td= user.school
