--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -9,6 +9,6 @@
       - link_to root_path do
         %span= "Home"
     %li{ :class => ('active' if params[:id] == 'modules') }= link_to "Modules", "/modules"
-    - if REGISTRATION_OPEN
+    - if APPLICATIONS_OPEN
       %li{ :class => ('active' if controller_name == 'registrations') }= link_to "Application", new_user_registration_path
     %li{ :class => ('active' if controller_name == 'messages') }= link_to "Contact", "/contact"
