--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,7 +1,7 @@
 #sidebar
   %h3= "2010 Application"
   %p= raw "We thank you for your interest.<br /> 2010 Registrations are now closed."
-  - if REGISTRATION_OPEN
+  - if APPLICATIONS_OPEN
     %p= "The applications are now open till the end of April 2010. Please use the button below to apply."
     .box
       - link_to new_user_registration_path, :id => "registration_button" do
@@ -20,7 +20,7 @@
     %li= "Form of Exam: Project report and oral presentation"
     %li
       = "Delay to submit application: End of April 2010"
-      - if REGISTRATION_OPEN
+      - if APPLICATIONS_OPEN
         = raw " through #{link_to 'online application', new_user_registration_path}"
     %li= raw "Location: #{link_to 'EPFL Science Park, PSE-C building', 'http://bit.ly/aWDL19', :onclick => 'window.open(this); return false'}"
   %h4= "More info"
