--- a/app/views/registrations/edit.html.haml
+++ b/app/views/registrations/edit.html.haml
@@ -4,6 +4,12 @@
 - form_for resource_name, resource, :url => registration_path(resource_name), :html => { :method => :put } do |f|
   = f.error_messages
   
+  - if resource_name == :teacher
+    %p
+      = f.label :name
+      %br
+      = f.text_field :name
+  
   %p
     = f.label :email
     %br
