Adding carrierwave for documents (but it's not working yet)

--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -1,4 +1,4 @@
-- title " | Mail templates > Edit #{mail_template_title(@mail_template)}"
+- title "Mail templates > Edit #{mail_template_title(@mail_template)}"
 
 .text
   %h3= "Editing template '#{mail_template_title(@mail_template)}'"
