--- a/app/views/admin/messages/trashes.html.haml
+++ b/app/views/admin/messages/trashes.html.haml
@@ -1,4 +1,5 @@
-- title ' | Trashed Messages'
+- title 'Trashed Messages'
+
 .text
   %h3= "Trashed Messages : #{smart_objects_objects_displayed_range(@messages)} of #{smart_objects_count(@messages)}"
   
