--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,4 +1,4 @@
-- title ' | Candidates'
+- title 'Candidates'
 
 .text
   %h3= "Candidates : #{smart_objects_objects_displayed_range(@users)} of #{smart_objects_count(@users)}"
