--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -34,6 +34,7 @@
               %span= "Home"
           %li{ :class => ('active' if controller_name == 'users') }= link_to "Candidates", admin_users_path
           %li{ :class => ('active' if controller_name == 'teachers') }= link_to "Teachers", admin_teachers_path
+          %li{ :class => ('active' if controller_name == 'documents') }= link_to "Documents", admin_documents_path
           %li{ :class => ('active' if controller_name == 'messages') }= link_to "Messages", admin_messages_path
           %li{ :class => ('active' if controller_name == 'mail_templates') }= link_to "Mail templates", admin_mail_templates_path
       #content.admin{ :class => "#{controller_name} #{action_name}" }
