--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -1,4 +1,4 @@
-- title " | Application #{Time.now.year}"
+- title "Application #{Time.now.year}"
 .text
   %h3= "Application form for mintt #{Time.now.year}"
   %p
