--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -1,4 +1,4 @@
-- title " | #{'Trashed ' if @message.trashed?}Messages > From #{@message.sender_email} received #{time_ago_in_words(@message.created_at)} ago"
+- title "#{'Trashed ' if @message.trashed?}Messages > From #{@message.sender_email} received #{time_ago_in_words(@message.created_at)} ago"
 
 .text.mail
   %h3= "Message"
