--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,7 +1,7 @@
-- title " | Candidates > Edit #{full_name(@user)}"
+- title "Candidates > Edit #{full_name(@user)}"
 
 .text
-  %h3= "Edit #{full_name(@user)}"
+  %h3= "Editing #{full_name(@user)}"
 - semantic_form_for [:admin, @user], :html => { :class => "main" } do |f|
   - f.inputs do
     %li#user_is_selected_input.boolean
