--- a/app/views/invitations/edit.html.haml
+++ b/app/views/invitations/edit.html.haml
@@ -1,7 +1,6 @@
-- title = "Set my password & create my account"
-- title " | #{title}"
+- t = "Set my password & create my account"
+- title t
 
-%h2= title
 - form_for resource_name, resource, :url => invitation_path(resource_name), :html => { :method => :put } do |f|
   = f.error_messages
   = f.hidden_field :invitation_token
@@ -10,11 +9,11 @@
     %br
     = f.password_field :password
     = error_message_on resource, :password
-  
+    
   %p
     = f.label :password_confirmation
     %br
     = f.password_field :password_confirmation
     = error_message_on resource, :password_confirmation
     
-  %p= f.submit title
+  %p= f.submit t
