--- a/app/views/layouts/_teacher_header.html.haml
+++ b/app/views/layouts/_teacher_header.html.haml
@@ -1,8 +1,7 @@
 - if teacher_signed_in?
   %ul
-    %li= link_to "My course information", "/course"
-    %li= link_to "My course's documents", "/documents"
-    %li= link_to "Log out", destroy_teacher_session_path
+    %li= link_to "My module", "/module"
+    %li= link_to "Teacher log out", destroy_teacher_session_path
   - link_to edit_teacher_registration_path, :class => "teacher #{controller_name == 'registrations' ? 'active' : ''}" do
     %strong
       %span.icon= current_teacher.name || current_teacher.email
@@ -10,5 +9,5 @@
 - else
   - link_to new_teacher_session_path, :class => "teacher" do
     %strong
-      %span.icon= "Log in"
+      %span.icon= "Teacher log in"
     %span.corner
