--- a/app/views/layouts/_user_header.html.haml
+++ b/app/views/layouts/_user_header.html.haml
@@ -1,7 +1,7 @@
 - if user_signed_in?
   %ul
-    %li= link_to "Program and documents", "/program"
-    %li= link_to "Log out", destroy_user_session_path
+    %li= link_to "Program & documents", "/program"
+    %li= link_to "Student log out", destroy_user_session_path
   - link_to edit_user_registration_path, :class => "user #{controller_name == 'registrations' ? 'active' : ''}" do
     %strong
       %span.icon= full_name(current_user)
@@ -9,5 +9,5 @@
 - else
   - link_to new_user_session_path, :class => "user" do
     %strong
-      %span.icon= "Log in"
+      %span.icon= "Student log in"
     %span.corner
