--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,4 +1,4 @@
-- title ' | Contact'
+- title 'Contact'
 .text
   %h3= "Contact page"
   %p= "If you have any question, please contact us through the following form:"
